# hdmarker

./: CMakeLists.txt  Doxyfile  FlexDepLists.cmake  clis  hdmarker.cpp  hdmarker.hpp  hdmarker.pc.in  intrinsics.h  makegrid.sh  marker_gen.cpp  projectConfig.cmake.in  subpattern.cpp  subpattern.hpp  test.cpp  timebench.cpp  timebench.hpp
cmake/: GenConfig.cmake  hdmarkerConfig.cmake.in  projectConfig.cmake.in  vad.cmake
cmake/modules/: CMakePackageConfigListHelpers.cmake
demo/: CMakeLists.txt  DEMO.md  demo.cpp  demo2.cpp  simple-calib.cpp  simplecalib.cpp  simplecalib.h
doc/: C++Usage.md  README.md  TargetGen.md  detection.md  doxyfile.in  doxygen_latex.sty  doxygen_manual.css  footer.html
evaluation/: CMakeLists.txt  eval.cpp  scene.blend
include/hdmarker/: hdmarker.hpp
src/: tests.cpp
src/lib/: gridstore.cpp  gridstore.hpp  hdmarker.cpp  hdmarker.hpp  intrinsics.h  loess.hpp  subpattern.cpp  subpattern.hpp  timebench.cpp  timebench.hpp
test/: CMakeLists.txt  buildtest.cpp
